--- a/batman/views/index.ejs
+++ b/batman/views/index.ejs
@@ -11,7 +11,7 @@
     <script src = "/javascripts/directive.js"></script>
     <script src = "/javascripts/services.js"></script>
     <script src = "/javascripts/controllers.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
     <script src = "/javascripts/main.js"></script>
 </head>
 <body>
