--- a/batman/views/index.ejs
+++ b/batman/views/index.ejs
@@ -10,8 +10,8 @@
     <script src = "/javascripts/ng/angular-resource.min.js"></script>
     <script src = "/javascripts/directive.js"></script>
     <script src = "/javascripts/services.js"></script>
-    <script src = "/javascripts/controllers.js"></script>
-    <!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
+    <script src = "/javascripts/util/d3.js"></script>
+    <script src="/javascripts/controllers.js"></script>
     <script src = "/javascripts/main.js"></script>
 </head>
 <body>
