--- a/batman/views/index.ejs
+++ b/batman/views/index.ejs
@@ -41,7 +41,7 @@
             <li>
                 <a>知识库管理</a>
                 <ul>
-                    <li><a href="">问题处理知识库</a></li>
+                    <li><a href="#/net">问题处理知识库</a></li>
                 </ul>
             </li>
             <li>
