--- a/batman/public/stylesheets/list.css
+++ b/batman/public/stylesheets/list.css
@@ -77,6 +77,7 @@ div#main article section:nth-of-type(4) table td{
     color: #999;
     text-align: left;
     line-height: 28px;
+    vertical-align: middle;
 }
 div#main article section:nth-of-type(4) table a {
     text-decoration: none;
