--- a/batman/views/index.ejs
+++ b/batman/views/index.ejs
@@ -47,9 +47,9 @@
             <li>
                 <a>面向问题分析机制</a>
                 <ul>
-                    <li><a href="">原因分析</a></li>
-                    <li><a href="">结果预测</a></li>
-                    <li><a href="#">方案推荐</a></li>
+                    <li><a href="#/reason">原因分析</a></li>
+                    <li><a href="#/result">结果预测</a></li>
+                    <li><a href="#/act">方案推荐</a></li>
                 </ul>
             </li>
         </ul>
